feat: LaunchConfig models for Smithery Transports (#60)
* feat: pull smithery launch config from doppler

* chore: bump sdk version
