# packages/onegrep-sdk/src/secrets/types.ts
@@ -1,6 +1,7 @@
 export interface SecretManager {
   initialize(): Promise<void>
   getSecretNames(): Promise<string[]>
+  hasSecret(secretName: string): Promise<boolean>
   getSecret(secretName: string): Promise<string>
   getSecrets(
     secretNames: string[],
